# ChiefAirJuice

gametech_assignment3/: .gitignore  BaseApplication.cpp  BaseApplication.h  CollisionCallback.h  CollisionContext.h  DesignDoc.md  GameApplication.cpp  GameApplication.h  GameManager.cpp  GameManager.h  GameObject.cpp  GameObject.h  Makefile.am  NetManager.cpp  NetManager.h  OgreMotionState.h  PlayerMotionState.h  ProjectUpdate.txt  README.md  README.txt  ScriptHandler.h  Simulator.cpp  Simulator.h  UserManual.txt  assignment3  clean  conf17702.dir  conf30159.dir  conf32413.dir  configure.ac  resources.cfg
gametech_assignment3/ScriptHandlers/: BallSpawner.h  ChangeMaterialOnCollision.h  CollisionHealth.h  DestroyOnCollision.h  RotateAnimationScript.h  TranslateAnimationScript.h
gametech_assignment3/materials/: ball.material  smile.material  white.material  wood.material
gametech_assignment3/mindymedia/: field.material  sky.material  wall.material
